kubernetes/apps/seafile/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seafile
  namespace: seafile
  annotations:
    tailscale.com/tags: tag:k8s-operator
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: 'Seafile'
    gethomepage.dev/description: 'File storage'
    gethomepage.dev/group: 'Homelab Services'
    gethomepage.dev/icon: 'seafile.png'
    gethomepage.dev/href: 'https://seafile.tail1345c.ts.net'
    gethomepage.dev/widget.type: 'homepage'
    gethomepage.dev/widget.url: 'https://seafile.tail1345c.ts.net'
spec:
  ingressClassName: tailscale
  rules:
  - host: seafile
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seafile
            port:
              number: 80
  tls:
  - hosts:
    - seafile
